Fixed name spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,6 +34,10 @@ h2 {
 	left: 280px;
 }
 
+#lastname {
+	margin-left: 20px;
+}
+
 #photo {
 	position: absolute;
 	top: 96px;
